# MachineLearningOperations

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  evaluate.dockerfile  main.py  pyproject.toml  requirements.txt  tasks.py  train.dockerfile
.dvc/: config
.github/workflows/: tests.yaml
src/mlops/: data.py  evaluate.py  model.py  train.py  visualize.py
src/mlops/config/: cfg_model.yaml  cfg_train.yaml
tests/: test_data.py  test_model.py
