[project]
name = "proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "torch>=2.9.1",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.8.0",
    "torchvision>=0.16.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
